update to home copy and resume copy

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="block-content">
                         <h3 class="title">About Me</h3>
                         <h3 class="subtitle">I'm a <b>Full Stack Developer,</b> specializing in the design of <b>Engaging And Responsive UI</b> & <b>High Performance Modern Web Applications.</b></h3>
-                        <p>I work with individuals, curation teams, and established brands to design and build memorable web experiences.  I start by taking the time to understand your unique vision.  Each project I deploy to the web is marked by unique design, high-ranking SEO performativity, mobile first responsive design, and keen attention to performance and speed.  Don't know what your vision is yet?  <a href="contact.html" style="color:black;">Let's talk</a>--I can help with that too.</p>
+                        <p>I work with individuals, curation teams, and established brands to design and build memorable web experiences.  I start by taking the time to understand your unique vision.  Each project I deploy to the web is marked by unique design, high-ranking SEO performativity, mobile first responsive design, and keen attention to performance and speed.  Don't know what your vision is yet?  <a href="contact.html" style="color:black;font-weight:600;">Let's talk</a>--I can help with that too.</p>
                         <div class="info-list row">
                             <p class="col-sm-6"><strong>Name: </strong> Joe Wright</p>
                             <p class="col-sm-6"><strong>Email: </strong> joewrightwebdev@gmail.com</p>
