--- a/resume.html
+++ b/resume.html
@@ -54,16 +54,16 @@
                                         <span>100%</span>
                                     </div>
                                 </div>
-                                <label class="progress-bar-label">SCSS/Sass</label>
+                                <label class="progress-bar-label">SCSS/Sass/LESS</label>
                                 <div class="progress">
-                                    <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>90%</span>
+                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
+                                        <span>100%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">Javascript</label>
                                 <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>100%</span>
+                                    <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
+                                        <span>90%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">jQuery</label>
@@ -74,34 +74,34 @@
                                 </div>
                                 <label class="progress-bar-label">AJAX</label>
                                 <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>100%</span>
+                                    <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
+                                        <span>90%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">React.JS/Redux</label>
                                 <div class="progress">
-                                    <div style="width: 95%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>95%</span>
+                                    <div style="width: 85%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                                        <span>85%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">Vue.JS</label>
                                 <div class="progress">
-                                    <div style="width: 70%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>70%</span>
+                                    <div style="width: 60%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
+                                        <span>60%</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <label class="progress-bar-label">Express/Node.JS</label>
                                 <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>100%</span>
+                                    <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                                        <span>90%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">MongoDB/NoSQL</label>
                                 <div class="progress">
-                                    <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
-                                        <span>90%</span>
+                                    <div style="width: 80%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
+                                        <span>80%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">MySQL</label>
@@ -116,34 +116,34 @@
                                         <span>100%</span>
                                     </div>
                                 </div>
-                                <label class="progress-bar-label">C#/asp.NET</label>
-                                <div class="progress">
-                                    <div style="width: 50%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
-                                        <span>50%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Wordpress</label>
-                                <div class="progress">
-                                    <div style="width: 70%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>70%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Visual Basic</label>
+                                <label class="progress-bar-label">PHP</label>
                                 <div class="progress">
                                     <div style="width: 80%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
                                         <span>80%</span>
                                     </div>
                                 </div>
+                                <label class="progress-bar-label">Wordpress</label>
+                                <div class="progress">
+                                    <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
+                                        <span>90%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">Visual Basic</label>
+                                <div class="progress">
+                                    <div style="width: 70%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
+                                        <span>70%</span>
+                                    </div>
+                                </div>
                                 <label class="progress-bar-label">Angular.JS</label>
                                 <div class="progress">
-                                    <div style="width: 50%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>50%</span>
+                                    <div style="width: 40%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                                        <span>40%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">Angular 2/4</label>
                                 <div class="progress">
-                                    <div style="width: 50%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>50%</span>
+                                    <div style="width: 40%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                                        <span>40%</span>
                                     </div>
                                 </div>
                             </div>
@@ -168,8 +168,8 @@
                                 </div>
                                 <label class="progress-bar-label">SVG</label>
                                 <div class="progress">
-                                    <div style="width: 70%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>70%</span>
+                                    <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                                        <span>90%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">Material Design</label>
@@ -221,6 +221,8 @@
                                             <br/>
                                                 •Development and maintainenance of Wordpress Child Theme Templates, Posts, & Pages
                                             <br/>
+                                                •Weekly Creative Sprints including New Pages, Content Types, and BackEnd Features to Push Brand Forward
+                                            <br/>
                                                 •Implemented Weekly A/B Experiments to optimize conversion rates
                                             <br/>
                                                 •Development of Web Metrics Dashboard utilizing full Google web suite including GTM, GA, GO, and GDS
@@ -269,6 +271,8 @@
                                                 •Initiated &amp; optimized email marketing strategy in assigned territory
                                             <br/>
                                                 •Developed company graphics in Adobe Suite
+                                            <br/>
+                                                •Managed West Coast Sales Region through independent marketing campaigns
                                             </p>
                                         </div>
                                     </div>
@@ -290,7 +294,7 @@
                                             <p>
                                                 •4.2 Course Average
                                                 <br/>
-                                                •6 Month Program meeting 15 hours per week
+                                                •6 Month Program meeting 20 hours per week
                                                 <br />
                                                 •Course Topics/Certifications include: HTML, CSS, JavaScript, jQuery, Bootstrap, Express.js, React.js, Node.js, Database Theory, MongoDB, MySQL, Git, C#, ASP.Net, and more
                                             </p>
@@ -349,8 +353,8 @@
                                 <div class="service-icon">
                                     <img src="images/ic/chat.svg" alt="Chat" />
                                 </div>
-                                <h4>Client Services</h4>
-                                <p>Every eventual great project success starts with a focus on client communications.  I engage my clients in planning using an Agile process and provide direct and constant lines of communication through the lifecycle of a project.</p>
+                                <h4>SEO Optimization</h4>
+                                <p>I have years of experience monitoring the latest SEO Knowledge and implementing the best practices to get web pages ranking.  I utilize stratetic content, semantic HTML, proper OG tagging, and the most modern practices including Web Schema.</p>
                             </div>
                         </div>
                     </div>
