port copy updte

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
                                                             <p>
                                                                 Full Stack Developer on a Marketing Dream Team!
                                                                 <br> 
-                                                                Wordpress, PHP, Apache, Nginx, MySQL, Javascript, CSS (Sass, SCSS & Less), Semantic HTML5, SEO, WP Engine
+                                                                Wordpress, PHP, Apache, Nginx, MySQL, Javascript, CSS (SCSS & Less), HTML5, SEO, WP Engine
                                                                 <br>
                                                                 Click to Visit
                                                             </p>
@@ -153,9 +153,9 @@
                                                             <h2>Bernaroo Event Site</h2>
                                                             <hr>
                                                             <p>
-                                                                Event Management Site commissioned by the Bernaroo Festival in New Bern, NC. 
+                                                                Event Site commissioned by the Bernaroo Music Festival. 
                                                                 <br/> 
-                                                                Bootstrap4, jQuery, jQueryUI, parallax, svg, gif, various FE Javascript Libraries.
+                                                                Bootstrap4, jQuery, jQueryUI, parallax, svg, gif, various JS Libraries.
                                                                 <br>
                                                                 Click to visit on The Web
                                                             </p>
