--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <div class="col-sm-4 huge-side left-side" style="height:auto">
                 <div class="huge-content">
                     <div class="crt-card-avatar">
-                        <img class="avatar avatar-195" src="images/avatar/artBioImage.jpg" width="195" height="195" alt="">
+                        <img class="avatar avatar-195" src="images/avatar/headshot.jpg" width="195" height="195" alt="">
                     </div>
                     <h1>Joe Wright</h1>
-                    <h2>Creative Full Stack Developer</h2>
-                    <a href="images/JWrightResume.pdf" class="btn btn-download" download>Download Resume</a>
+                    <h2>Full Stack Developer</h2>
+                    <a href="images/JoeWrightResume.pdf" class="btn btn-download" download>Download Resume</a>
 
                     <ul class="social-icons">
                         <li>
