--- a/portfolio.html
+++ b/portfolio.html
@@ -43,17 +43,19 @@
                                             <li data-filter=".frontend">Front End</li>
                                             <li data-filter=".fullstack">Full Stack</li>
                                             <li data-filter=".backend">Back End</li>
+                                            <li data-filter=".cms">CMS</li>
                                             <li data-filter=".uxui">UX/UI</li>
                                             <li data-filter=".jqueryIso">jQuery</li>
-                                            <li data-filter=".reactJS">React.JS</li>
-                                            <li data-filter=".nodeJS">Node.JS</li>
+                                            <li data-filter=".reactJS">React</li>
+                                            <li data-filter=".nodeJS">Node</li>
+                                            <li data-filter=".php">PHP</li>
                                             <li data-filter=".professional">Professional</li>
-                                            <li data-filter=".scholastic">Scholastic</li>
+                                            <li data-filter=".scholastic">Just For Fun</li>
                                         </ul>
                                     </div>
                                     <div class="portfolio-container row isotope" id="portfolio-container">
                                         <!-- WORK 1 START -->
-                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui fullstack frontend">
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php fullstack frontend">
                                             <a class="open-project" target="_blank" href="https://www.samanage.com/">
                                                 <div class="portfolio-column">
                                                     <div class="portfolio-hover">
@@ -99,7 +101,7 @@
                                         </div>
                                         <!-- WORK 1 END -->
                                         <!-- WORK 1 START -->
-                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui fullstack frontend">
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item cms php professional uxui fullstack frontend">
                                             <a class="open-project" target="_blank" href="https://blog.samanage.com/">
                                                 <div class="portfolio-column">
                                                     <div class="portfolio-hover">
@@ -123,29 +125,29 @@
                                         <!-- WORK 1 END -->
                                         <!-- WORK 2 START -->
                                         <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item frontend uxui professional reactJS">
-                                            <a class="open-project" target="_blank" href="https://fierce-fortress-93462.herokuapp.com/">
+                                            <a class="open-project" target="_blank" href="https://evening-ridge-43372.herokuapp.com/">
                                                 <div class="portfolio-column">
                                                     <div class="portfolio-hover">
                                                         <div class="portfolio-content">
-                                                            <h2>Pie Face Girls</h2>
+                                                            <h2>Palettely</h2>
                                                             <hr>
                                                             <p>
-                                                                Web Content for National Recording Artist Pie Face Girls. Project In Progress. React single page appplication.
+                                                                Curated theme palettes offering easy implementation via click to copy declared SCSS variables.
                                                                 <br> 
-                                                                React.JS, Node.JS, Express, Yarn, Various NPMs.
+                                                                React.JS, Node.JS, Express, Yarn, Various NPMs, Bootstrap, Heroku.
                                                                 <br>
                                                                 Click to visit on Heroku
                                                             </p>
                                                         </div>
                                                         <div class="portfolio-overlay"></div>
                                                     </div>
-                                                    <img src="images/portfolio/pfg.png" alt="">
+                                                    <img src="images/portfolio/palettely.png" alt="">
                                                 </div>
                                             </a>
                                         </div>
                                         <!-- WORK 2 END -->
                                         <!-- WORK 3 START -->
-                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item uxui professional frontend jqueryIso">
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item cms uxui professional frontend jqueryIso">
                                             <a class="open-project" target="_blank" href="http://www.bernaroomusicfest.com/index.html">
                                                 <div class="portfolio-column">
                                                     <div class="portfolio-hover">
@@ -191,7 +193,7 @@
                                         </div>
                                         <!-- WORK 4 END -->
                                         <!-- WORK 5 START -->
-                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item uxui professional frontend">
+                                        <div class="col-md-4 col-sm-6 col-xs-12 cms php portfolio-item uxui professional frontend">
                                             <a class="open-project" target="_blank" href="https://www.thewellyogi.com/">
                                                 <div class="portfolio-column">
                                                     <div class="portfolio-hover">
@@ -236,6 +238,29 @@
                                             </a>
                                         </div>
                                         <!-- WORK 6 END -->
+                                        <!-- WORK 2 START -->
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item frontend uxui professional reactJS">
+                                            <a class="open-project" target="_blank" href="https://fierce-fortress-93462.herokuapp.com/">
+                                                <div class="portfolio-column">
+                                                    <div class="portfolio-hover">
+                                                        <div class="portfolio-content">
+                                                            <h2>Pie Face Girls</h2>
+                                                            <hr>
+                                                            <p>
+                                                                Web Content for National Recording Artist Pie Face Girls. Project In Progress. React single page appplication.
+                                                                <br> 
+                                                                React.JS, Node.JS, Express, Yarn, Various NPMs.
+                                                                <br>
+                                                                Click to visit on Heroku
+                                                            </p>
+                                                        </div>
+                                                        <div class="portfolio-overlay"></div>
+                                                    </div>
+                                                    <img src="images/portfolio/pfg.png" alt="">
+                                                </div>
+                                            </a>
+                                        </div>
+                                        <!-- WORK 2 END -->
                                         <!-- WORK 7 START -->
                                         <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item uxui frontend professional jqueryIso">
                                             <a class="open-project" target="_blank" href="https://joewrightnc.github.io/OriginalPortfolio/">
@@ -351,7 +376,7 @@
                                         </div>
                                         <!-- WORK 10 END -->
                                         <!-- WORK 11 START -->
-                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item nodeJS professional backend">
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item nodeJS scholastic backend">
                                             <a class="open-project" target="_blank" href="https://github.com/JoeWrightNC/pokedex">
                                                 <div class="portfolio-column">
                                                     <div class="portfolio-hover">
