--- a/resume.html
+++ b/resume.html
@@ -211,19 +211,34 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="exp-holder">
+                                            <div class="exp">
+                                                    <div class="hgroup">
+                                                        <h4><span>Web Developer</span> / State Newsroom</h4>
+                                                        <h5 class="badge">Feb 2019 - Present</h5>
+                                                    </div>
+                                                    <p>
+                                                        •Contracted Webmaster for 11 unique news websites, powered by PHP/Wordpress
+                                                    <br/>
+                                                        •Development and maintainenance of Chid theme, adding features and content types as needed
+                                                    <br/>
+                                                        •Implementation of SEO Strategy
+                                                    <br/>
+                                                        •Wordpress, PHP, Apache, Nginx, MySQL, jQuery, JS, CSS, Semantic HTML 5
+                                                    </p>
+                                                </div>
                                         <div class="exp">
                                             <div class="hgroup">
                                                 <h4><span>Web Developer</span> / Samanage</h4>
-                                                <h5 class="badge">Sep 2018 - Present</h5>
+                                                <h5 class="badge">Aug 2018 - Present</h5>
                                             </div>
                                             <p>
-                                                •Organization and Optimization of existing Wordpress Site
+                                                •Ongoing organization and optimization of existing Wordpress Site
                                             <br/>
                                                 •Development and maintainenance of Wordpress Child Theme Templates, Posts, & Pages
                                             <br/>
-                                                •Weekly Creative Sprints including New Pages, Content Types, and BackEnd Features to Push Brand Forward
+                                                •Development work including New Pages, Content Types, and BackEnd Features to Push Online Brand Forward
                                             <br/>
-                                                •Implemented Weekly A/B Experiments to optimize conversion rates
+                                                •Implemented Weekly A/B Experiments via Google Optimize and VWO
                                             <br/>
                                                 •Development of Web Metrics Dashboard utilizing full Google web suite including GTM, GA, GO, and GDS
                                             <br/>
@@ -233,14 +248,12 @@
                                         <div class="exp">
                                             <div class="hgroup">
                                                 <h4><span>Freelance Web Developer</span> / Joe Wright Web Development</h4>
-                                                <h5 class="badge">Nov 2017 - <span class="current">Present</span></h5>
+                                                <h5 class="badge">Feb 2017 - <span class="current">Present</span></h5>
                                             </div>
                                             <p>
                                                 •Create, code and maintain sites from layout to final form according to the unique client needs.
                                             <br/>
                                                 •Worked on existing code bases to improve UX/UI for a variety of clients
-                                            <br/>
-                                                •Developed Several Web and iOS apps utilizing a variety of frameworks (React, React Native, Vue, Vue Native)
                                             </p>
                                         </div>
                                         <div class="exp">
@@ -257,10 +270,10 @@
                                             <br/>
                                                 •Consistently lead team in productivity metrics
                                             <br/>
-                                                •Received CRAFT-E Award, a monthly award from the company recognizing a top contributor embodying their values. (200 employee company)
+                                                •Received CRAFT-E Award, honoring top 4 employees each year. (200 employee company)
                                             </p>
                                         </div>
-                                        <div class="exp">
+                                       <!--  <div class="exp">
                                             <div class="hgroup">
                                                 <h4><span>Account Manager</span> / FurnitureLab</h4>
                                                 <h5 class="badge">July 2017 - Dec 2017</h5>
@@ -274,7 +287,7 @@
                                             <br/>
                                                 •Managed West Coast Sales Region through independent marketing campaigns
                                             </p>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -340,20 +353,20 @@
                                     <img src="images/ic/eye.svg" alt="Eye" />
                                 </div>
                                 <h4>UX/UI Design</h4>
-                                <p>I utilize material and classical design principles to build brand materials, logos, web graphics, and web layouts that are unique and memorable.  I take time to consider all the possible user cases and focus my work on intuitivity and usability.</p>
+                                <p>I utilize material and classical design principles to build brand materials, logos, web graphics, and web layouts that are clean, refreshing, and engaging.  I take time to consider all the possible user cases and focus my work on intuitivity and usability.</p>
                             </div>
                             <div class="col-md-4 col-sm-6 service">
                                 <div class="service-icon">
                                     <img src="images/ic/responsive.svg" alt="Responsive" />
                                 </div>
                                 <h4>Web Design</h4>
-                                <p>I build responsive single and multi page web applications designed to run in modern browsers.  In every project, my goal is to make my clients amazed by how much the final product exceeds their expectations.</p>
+                                <p>I build responsive, memorable single and multi page web applications designed to run in modern browsers.  In every project, my goal is to make my clients amazed by how much the final product exceeds their expectations while representing their vision.</p>
                             </div>
                             <div class="col-md-4 col-sm-6 service">
                                 <div class="service-icon">
                                     <img src="images/ic/chat.svg" alt="Chat" />
                                 </div>
-                                <h4>SEO Optimization</h4>
+                                <h4>SEO Consultation </h4>
                                 <p>I have years of experience monitoring the latest SEO Knowledge and implementing the best practices to get web pages ranking.  I utilize stratetic content, semantic HTML, proper OG tagging, and the most modern practices including Web Schema.</p>
                             </div>
                         </div>
