--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                     <ul class="social-icons">
                         <li>
-                            <a href="https://joewrightnc.github.io/" target="_blank" class="social-icon">
+                            <a href="https://github.com/joewrightnc" target="_blank" class="social-icon">
                                 <i class="fa fa-github" aria-hidden="true"></i>
                             </a>
                         </li>
