--- a/resume.html
+++ b/resume.html
@@ -350,21 +350,25 @@
                         <div class="row serviceRow">
                             <div class="col-md-4 col-sm-6 service">
                                 <div class="service-icon">
-                                    <img src="images/ic/eye.svg" alt="Eye" />
+<!--                                <img src="images/ic/eye.svg" alt="Eye" /> -->                                    
+                                    <i class="fa fa-object-group fa-lg" aria-hidden="true"></i>
                                 </div>
                                 <h4>UX/UI Design</h4>
                                 <p>I utilize material and classical design principles to build brand materials, logos, web graphics, and web layouts that are clean, refreshing, and engaging.  I take time to consider all the possible user cases and focus my work on intuitivity and usability.</p>
                             </div>
                             <div class="col-md-4 col-sm-6 service">
                                 <div class="service-icon">
-                                    <img src="images/ic/responsive.svg" alt="Responsive" />
+                                    <!-- <img src="images/ic/responsive.svg" alt="Responsive" /> -->
+                                    <i class="fa fa-laptop fa-lg"  aria-hidden="true"></i>
                                 </div>
                                 <h4>Web Design</h4>
                                 <p>I build responsive, memorable single and multi page web applications designed to run in modern browsers.  In every project, my goal is to make my clients amazed by how much the final product exceeds their expectations while representing their vision.</p>
                             </div>
                             <div class="col-md-4 col-sm-6 service">
                                 <div class="service-icon">
-                                    <img src="images/ic/chat.svg" alt="Chat" />
+                                <!--   <img src="images/ic/chat.svg" alt="Chat" />-->
+                                <i class="fa fa-search fa-lg" aria-hidden="true"></i>
+
                                 </div>
                                 <h4>SEO Consultation </h4>
                                 <p>I have years of experience monitoring the latest SEO Knowledge and implementing the best practices to get web pages ranking.  I utilize stratetic content, semantic HTML, proper OG tagging, and the most modern practices including Web Schema.</p>
