--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <meta property="og:description" content="Homepage for Joe Wright, a Creative Full Stack Web Developer based in Central North Carolina."/>
     <meta name="description" content="Joe Wright Web Developer Full Stack React Homepage">
 	<meta name="keywords" content="Joe Wright, Web Developer, Full Stack, React, Node, Raleigh, Durham, Carrboro, Chapel Hill, North Carolina">
-	<link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136262506-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-136262506-1');
+    </script>
+    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/plugins.min.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
