--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="description" content="Joe Wright Web Developer Full Stack React Homepage">
 	<meta name="keywords" content="Joe Wright, Web Developer, Full Stack, React, Node, Raleigh, Durham, Carrboro, Chapel Hill, North Carolina">
-	<link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136262506-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-136262506-1');
+    </script>
+    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/plugins.min.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
