--- a/portfolio.html
+++ b/portfolio.html
@@ -828,6 +828,7 @@
     <script src='js/jquery.min.js'></script>
 	<script src='js/parallax.min.js'></script>
     <script src='js/isotope.pkgd.js'></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src='js/isotopeStarter.js'></script>
     <script src="js/main.js"></script>
 </body>
