portfolio items added

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="filters centerUp">
-                                        <span>Filters :</span>
+                                        <span><strong>FILTERS:</strong></span>
                                         <ul id="filters">
                                             <li class="active" data-filter="*">All</li>
                                             <li data-filter=".frontend">Front End</li>
